# nuplan-devkit

./: .env.example  .gitignore  CLAUDE.md  CONNECTION_POOLING_IMPLEMENTATION.md  DEEPCOPY_INVESTIGATION_REPORT.md  Dockerfile  Justfile  MIGRATION_SUMMARY.md  ML_PLANNING_GUIDE.md  README.md  docker-compose.yml  nuplan_mini_dl.sh  profile_deepcopy.py  pyproject.toml
.claude/: DOCUMENTATION_BACKLOG.md  FUTURE_GENERIC_DOCUMENT_COMMAND.md  ISSUES.md  SESSION2_QUICKSTART.md  SESSION3_QUICKSTART.md  SESSION4_FINDINGS.md  SESSION4_QUICKSTART.md  SESSION5_BATCH1_FINDINGS.md  SESSION5_BATCH2_SUMMARY.md  SESSION_VISUALIZATION_TRACKING.md  TEMP_AGENT_3_OUTPUT.txt  TEMP_AGENT_4_OUTPUT.txt  TEMP_BATCH1_FILES.txt
.claude/workflows/: plan-execution.md
docs/: ISSUES.md
docs/architecture/: CALLBACKS.md  CONTROLLER.md  HYDRA_CONFIG.md  INDEX.md  METRICS.md  OBSERVATION_HISTORY.md  PLANNER_INTERFACE.md  README.md  SCENARIO_BUILDER.md  SIMULATION_CORE.md  WORKSTREAM_C_SUMMARY.md
docs/plans/: 2025-11-16-REALTIME_VIZ_DESIGN.md
docs/plans/2025-11-16-realtime-performance/: README.md  investigation-plan.md
docs/plans/2025-11-16-realtime-performance/reports/: 2025-11-16-BASELINE_COMPARISON.md  2025-11-16-CPROFILE_RESULTS.md  2025-11-16-EXECUTIVE_SUMMARY.md  2025-11-16-PERFORMANCE_EXECUTIVE_SUMMARY.md  2025-11-16-streaming-viz-proof.md  2025-11-17-PHASE1_COMPLETE.md
nuplan/cli/: DESIGN.md  dataset_utils.py  download_cli.py  explore_cli.py  inventory_cli.py  map_cli.py  nuplan_cli.py
nuplan/common/actor_state/: CLAUDE.md
nuplan/common/geometry/: CLAUDE.md
nuplan/common/maps/: CLAUDE.md
nuplan/common/maps/nuplan_map/: CLAUDE.md
nuplan/common/utils/: CLAUDE.md
nuplan/common/utils/test_utils/: CLAUDE.md
nuplan/database/common/: db.py  test_connection_pool.py  traffic_light_cache.py
nuplan/database/common/test/: test_traffic_light_cache.py
nuplan/database/nuplan_db_orm/: CLAUDE.md
nuplan/planning/: CLAUDE.md
nuplan/planning/scenario_builder/: CLAUDE.md
nuplan/planning/scenario_builder/nuplan_db/: CLAUDE.md  nuplan_scenario.py
nuplan/planning/script/config/simulation/callback/: streaming_viz_callback.yaml
nuplan/planning/simulation/: CLAUDE.md
nuplan/planning/simulation/callback/: CLAUDE.md  streaming_visualization_callback.py
nuplan/planning/simulation/callback/test/: CLAUDE.md
nuplan/planning/simulation/controller/: CLAUDE.md
nuplan/planning/simulation/controller/motion_model/: CLAUDE.md
nuplan/planning/simulation/controller/test/: CLAUDE.md
nuplan/planning/simulation/controller/tracker/: CLAUDE.md
nuplan/planning/simulation/controller/tracker/ilqr/: CLAUDE.md
nuplan/planning/simulation/controller/tracker/lqr/: CLAUDE.md
nuplan/planning/simulation/history/: CLAUDE.md
nuplan/planning/simulation/history/test/: CLAUDE.md  test_state_isolation.py
nuplan/planning/simulation/main_callback/: CLAUDE.md
nuplan/planning/simulation/main_callback/test/: CLAUDE.md
nuplan/planning/simulation/observation/: CLAUDE.md
nuplan/planning/simulation/observation/idm/: CLAUDE.md
nuplan/planning/simulation/observation/test/: CLAUDE.md
nuplan/planning/simulation/occupancy_map/: CLAUDE.md
nuplan/planning/simulation/path/: CLAUDE.md
nuplan/planning/simulation/planner/: CLAUDE.md
nuplan/planning/simulation/planner/ml_planner/: CLAUDE.md
nuplan/planning/simulation/predictor/: CLAUDE.md
nuplan/planning/simulation/predictor/test/: CLAUDE.md
nuplan/planning/simulation/runner/: CLAUDE.md
nuplan/planning/simulation/runner/test/: CLAUDE.md
nuplan/planning/simulation/simulation_time_controller/: CLAUDE.md
nuplan/planning/simulation/trajectory/: CLAUDE.md
nuplan/planning/simulation/visualization/: CLAUDE.md
nuplan/planning/training/modeling/metrics/: CLAUDE.md
nuplan/planning/training/modeling/models/: CLAUDE.md
nuplan/planning/training/modeling/models/dynamics_layers/: CLAUDE.md
nuplan/planning/utils/multithreading/: worker_ray.py
nuplan/planning/visualization/: __init__.py  ws_server.py
scripts/: health_check.py  profile_simple_planner.sh  profile_simulation.py  profile_single_scenario.sh  verify_connection_pooling.py
tutorials/: nuplan_advanced_model_training.ipynb  nuplan_framework.ipynb  nuplan_planner_tutorial.ipynb  nuplan_scenario_visualization.ipynb
tutorials/utils/: tutorial_utils.py
web/: README.md  TESTING.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  main.jsx
web/src/components/: DebugPanel.jsx  PlaybackControls.jsx  SimulationCanvas.jsx
web/src/hooks/: useWebSocket.js
web/src/utils/: coordinateTransform.js  geometryHelpers.js
