# ABOUTME: Modern Python packaging configuration for nuplan-devkit
# ABOUTME: Replaces setup.py and conda environment with uv-based dependency management

[build-system]
requires = ["setuptools>=59.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuplan-devkit"
version = "1.2.2"
description = "The official devkit of the nuPlan dataset (www.nuPlan.org)."
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = { text = "apache-2.0" }
authors = [
    { name = "The nuPlan team @ Motional", email = "nuscenes@motional.com" }
]
keywords = ["autonomous-vehicles", "planning", "simulation", "dataset", "nuplan"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "License :: Free for non-commercial use",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies (from requirements.txt, preserving pins for stability)
dependencies = [
    "aioboto3",
    "aiofiles",
    "bokeh==2.4.3",
    "boto3==1.24.59",
    "cachetools",
    "casadi",
    "control==0.9.1",
    "coverage",
    "docker",
    "dotenv>=0.9.9",
    "Fiona",
    "geopandas>=0.12.1",
    "grpcio==1.43.0",
    "grpcio-tools==1.43.0",
    "guppy3==3.1.2",
    "hydra-core==1.1.0rc1",
    "hypothesis",
    "joblib",
    "matplotlib",
    "mock",
    "moto",
    "nest_asyncio",
    "numpy==1.23.4",
    "opencv-python<=4.5.1.48",
    "pandas",
    "pillow<10.0.0",
    "psutil",
    "pyarrow",
    "pyinstrument",
    "pyogrio",
    "pyquaternion>=0.9.5",
    "pytest",
    "rasterio",
    "ray",
    "requests",
    "beautifulsoup4",  # HTML parsing for S3 bucket scraping
    "rich",  # Beautiful CLI output (tables, progress bars)
    "retry",
    "rtree",
    "s3fs",
    "scipy",
    "selenium",
    "setuptools==59.5.0",
    "Shapely>=2.0.0",
    "SQLAlchemy==1.4.27",
    "sympy",
    "testbook",
    "tornado",
    "tqdm",
    "typer",
    "ujson",
    "urllib3",
]

[project.optional-dependencies]
# PyTorch with CUDA 11.1 support for Linux (Titan RTX)
torch-cuda11 = [
    "future==0.18.1",
    "pytorch-lightning==1.3.8",
    "timm==0.4.12",  # Pinned for PyTorch 1.9.0 compatibility (timm 1.0+ requires torch>=1.11)
    "torch==1.9.0+cu111; platform_system == 'Linux'",
    "torch==1.9.0; platform_system == 'Darwin'",
    "torch_scatter==2.0.9; platform_system == 'Linux'",
    "torchmetrics==0.7.2",
    "torchvision==0.10.0+cu111",
]

# CPU-only PyTorch (fallback for systems without CUDA)
torch-cpu = [
    "future==0.18.1",
    "pytorch-lightning==1.3.8",
    "timm==0.4.12",  # Pinned for PyTorch 1.9.0 compatibility
    "torch==1.9.0",
    "torchmetrics==0.7.2",
    "torchvision==0.10.0",
]

# Development tools
dev = [
    "pre-commit",
    "black==22.3.0",
    "isort==5.10.1",
    "flake8==3.9.2",
    "flake8-docstrings",
    "flake8-pytest-style",
    "mypy==0.942",
    "types-protobuf==3.17.4",
    "types-cachetools==5.0.1",
    "types-ujson==4.2.1",
    "types-requests==2.27.20",
    "types-mock==4.0.13",
    "pyupgrade",
]

# Jupyter tutorials and interactive development
tutorials = [
    "jupyter",
    "jupyterlab",
    "ipywidgets",
    "ipykernel",  # Jupyter kernel support (replaces nb_conda_kernels)
]

# Full development environment (all extras)
all = [
    "nuplan-devkit[torch-cuda11,dev,tutorials]",
]

[project.urls]
Homepage = "https://github.com/motional/nuplan-devkit"
Documentation = "https://nuplan-devkit.readthedocs.io/"
Repository = "https://github.com/motional/nuplan-devkit"
"Bug Tracker" = "https://github.com/motional/nuplan-devkit/issues"

[project.scripts]
nuplan_cli = "nuplan.cli.nuplan_cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["*test", "bazel-nuplan_devkit*", "bazel-nuplan-devkit*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.uv]
# Allow pre-releases (required for hydra-core==1.1.0rc1 and omegaconf==2.1.0rc1)
prerelease = "allow"

# PyTorch CUDA wheel indices (required for +cu111 versions)
find-links = [
    "https://download.pytorch.org/whl/torch_stable.html",
    "https://data.pyg.org/whl/torch-1.9.0+cu111.html",
]

# Development preferences
dev-dependencies = [
    "nuplan-devkit[dev]",
]

# Black configuration
[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py39"]

# isort configuration
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["nuplan"]
skip_gitignore = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["nuplan"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
strict = true
allow_subclassing_any = true
show_column_numbers = true
allow_untyped_decorators = true

# Coverage configuration
[tool.coverage.run]
source = ["nuplan"]
omit = ["*/test/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
